force-app/main/default/objects/Error_Log__c/fields/Actor_Name__c.field-meta.xml
<CustomField>
    <fullName>Actor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the actor, this lookup will be populated if the actor Id is a user</description>
    <label>Actor Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Errors_and_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>