force-app/main/default/objects/Error_Log__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex_Class</fullName>
                <label>Apex Class</label>
            </value>
            <value>
                <fullName>Apex_Trigger</fullName>
                <label>Apex Trigger</label>
            </value>
            <value>
                <fullName>Process_Builder</fullName>
                <label>Process Builder</label>
            </value>
            <value>
                <fullName>HTTP_Callout</fullName>
                <label>HTTP Callout</label>
            </value>
            <value>
                <fullName>HTTP_Inbound</fullName>
                <label>HTTP Inbound</label>
            </value>
            <value>
                <fullName>Platform_Event</fullName>
                <label>Platform Event</label>
            </value>
            <value>
                <fullName>Apex_Batch</fullName>
                <label>Apex Batch</label>
            </value>
            <value>
                <fullName>Log</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>