force-app/main/default/objects/Error_Log__c/fields/COMM_OriginFormula__c.field-meta.xml
<CustomField>
    <fullName>COMM_OriginFormula__c</fullName>
    <formula>IF(ISBLANK(Origin__c), Job_Execution__r.Batch_Definition__r.Class_Name__c, Origin__c)</formula>
    <label>Origin Formula</label>
    <type>Text</type>
</CustomField>