force-app/main/default/objects/Error_Log__c/fields/Job_Execution__c.field-meta.xml
<CustomField>
    <fullName>Job_Execution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Job Execution record, it is filled if the error comes from the Batch Framework</description>
    <label>Job Execution</label>
    <referenceTo>Job_Execution__c</referenceTo>
    <relationshipName>Error_and_Monitoring_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>