force-app/main/default/objects/Error_Log__c/listViews/Error_Today.listView-meta.xml
<ListView>
    <fullName>Error_Today</fullName>
    <columns>NAME</columns>
    <columns>COMM_OriginFormula__c</columns>
    <columns>Category__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Actor_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>